# ChangeLog for vserver-utils

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vnamespace.c:
  Prevent accidental namespace cleanup

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c, src/vnamespace.c:
  Fix lazy handling of getcwd(0,0)

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/lib/vps.sh:
  Catch unknown init styles

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> configure.ac, m4/libs.m4:
  Add dietlibc detection

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> +scripts/commands/login.sh,
  scripts/lib/vps.sh, scripts/pathconfig.in, scripts/Makefile.am:
  Add login command to vserver

  21 Jan 2006; Benedikt Böhm <hollow@gentoo.org> configure.ac, +m4/libs.m4:
  Add check for libvserver and libutil (for openpty)

  20 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/Makefile, +src/vlogin.c:
  Add pseudo terminal login program

*vserver-utils-1.0.2 (10 Jan 2006)

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/release.sh:
  Add command to release persistant vserver in case of failure

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c:
  Code cleanup + various minor fixes

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c:
  Rewrite error management to be more tolerant

  10 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vmount.c:
  Add support for mount flags

  09 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vncontext.c:
  Fix netmask handling

  09 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/lib/vps.sh,
  scripts/command/start.sh, scripts/pathconfig.in:
  Add network handling

  24 Dec 2005; Benedikt Böhm <hollow@gentoo.org> scripts/lib/vps.sh:
  Remove antiquated vdir and vdirbase symlinks

*vserver-utils-1.0.1 (23 Dec 2005)

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> scripts/command/status.sh:
  Fix output of status command

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> etc/vservers:
  Remove handling of guests on start/stop
