@@ -18,9 +18,6 @@
 
 : ${_HAVE_PATHCONFIG:?"Internal error: no pathconfig in fs.sh"}
 
-[ -z "${_HAVE_LIB_UTIL}" ] && source ${_LIB_UTIL}
-
-
 fs.best_file() {
 # $* - files to be found by priority
 	local found
@@ -31,64 +28,6 @@ fs.best_file() {
 	done
 	
 	echo ${found}
-}
-
-fs.lock() {
-	local lockfile=$1
-	
-	[ -z "${lockfile}" ] && util.error "fs.lock: argument <lockfile> missing"
-	
-	# Create random ID string for lockfile
-	LOCKKEY=${RANDOM}
-	
-	if [ -e "${lockfile}" ]; then
-		util.error "fs.lock: lockfile '${lockfile}' exists"
-	else
-		echo ${LOCKKEY} > ${lockfile}
-	fi
-}
-
-fs.locked() {
-# return codes:
-# 0 - unlocked
-# 1 - locked,mine
-# 2 - locked,foreign
-	local lockfile=$1
-	
-	[ -z "${lockfile}" ] && util.error "fs.locked: argument <lockfile> missing"
-	[ -z "${LOCKKEY}" ]  && util.error "fs.locked: LOCKKEY missing"
-	
-	if [ -e "${lockfile}" ]; then
-		if [ "$(<${lockfile})" == "${LOCKKEY}" ]; then
-			return 1
-		else
-			return 2
-		fi
-	else
-		return 0
-	fi
-}
-
-fs.unlock() {
-# return codes:
-# 0 - noop
-# 1 - unlocked,mine
-# 2 - locked,foreign
-	local lockfile=$1
-	
-	[ -z "${lockfile}" ] && util.error "fs.unlock: argument <lockfile> missing"
-	[ -z "${LOCKKEY}" ]  && util.error "fs.locked: LOCKKEY missing"
-	
-	if [ -e "${lockfile}" ]; then
-		if [ "$(<${lockfile})" == "${LOCKKEY}" ]; then
-			rm -f ${lockfile}
-			return 1
-		else
-			return 2
-		fi
-	else
-		return 0
-	fi
 }
 
 _HAVE_LIB_FS=1
